<resources>
    <string name="app_name">6DashBoard</string>
    <string name="calculadora">Calculadora</string>
    <string name="lstAmigos">Lista Amigos</string>
    <string name="perro">Edad Canina</string>
    <string name="quizzes">Quizzes</string>
    <string name="galeria">Galeria</string>
    <string name="mapas">Mapas</string>
    <string name="restaurante">Restaurantes</string>
    <string name="configuracion">Configuracion</string>
    <string name="textoPrincipal">Dale al boton\npara empezar el juego</string>
    <string name="botonPrincipal">Iniciar Juego</string>
    <string name="botonSiguiente">Siguiente pregunta</string>
    <string name="botonReintentar">Reintentar pregunta</string>
    <string name="botonValidar">Confirmar</string>
    <string name="numPregunta">/3</string>
    <string name="botonAcabar">Volver a empezar</string>
    <string name="textoJuego">Señala la respuesta correcta</string>
    <string name="enunciado1">País mas grande del mundo</string>
    <string name="enunciado2">País más poblado del mundo</string>
    <string name="enunciado3">País mas pequeño del mundo</string>
    <string name="respuesta1pregunta1">Rusia</string>
    <string name="respuesta2pregunta1">Canadá</string>
    <string name="respuesta1pregunta2">China</string>
    <string name="respuesta2pregunta2">India</string>
    <string name="respuesta1pregunta3">Ciudad del Vaticano</string>
    <string name="respuesta2pregunta3">Monaco</string>
    <string name="respuestaCorrecta">Correcto\nProcedamos con\nla siguiente pregunta</string>
    <string name="respuestaFallida">Incorrecto\nPor favor intente\nacertar que no es tan dificil</string>
    <string name="respuestaFinal">Felicidades has ganado</string>
    <string name="Titulo">Bienvenidos a mi APP \nCalculadora</string>
    <string name="Primer_valor">Introduce el primer valor</string>
    <string name="Segundo_valor">Introduce el segundo valor</string>
    <string name="ayuda_num1">Primer valor</string>
    <string name="ayuda_num2">Segundo valor</string>
    <string name="msg_toast">"No has introducido un digito"</string>
    <string name="resultado">El resultado es </string>
</resources>