<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Calculadora_Activity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:padding="16dp"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/calculadora" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Primer_valor"
        android:padding="5dp"
        android:textSize="16dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ayuda_num1"
        android:inputType="number"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Segundo_valor"
        android:padding="5dp"
        android:textSize="16dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ayuda_num2"
        android:inputType="number"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_suma"
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:text="+" />
        <Button
            android:id="@+id/button_resta"
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:text="-" />
        <Button
            android:id="@+id/button_multiplicacion"
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:text="*" />
        <Button
            android:id="@+id/button_division"
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:text="/" />
    </LinearLayout>
    <TextView
        android:id="@+id/resultado_calculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>
</LinearLayout>