<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <RelativeLayout
                    android:id="@+id/rellay_calculadora"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/red"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView1"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_calculadora"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView1"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/calculadora"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rellay_amigos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/yellow"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_amigos"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView2"
                            android:layout_centerHorizontal="true"
                            android:text="@string/lstAmigos"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="15dp">


                <RelativeLayout
                    android:id="@+id/rellay_embaperro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/lime"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_edad_canina"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView3"
                            android:layout_centerHorizontal="true"
                            android:text="@string/perro"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rellay_quizz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/green"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView4"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_quizzes"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView4"
                            android:layout_centerHorizontal="true"
                            android:text="@string/quizzes"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="15dp">


                <RelativeLayout
                    android:id="@+id/rellay_galeria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/blue"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView5"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView5"
                            android:layout_centerHorizontal="true"
                            android:text="@string/galeria"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relly_mapas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/darkblue"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView6"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_mapas"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView6"
                            android:layout_centerHorizontal="true"
                            android:text="@string/mapas"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="15dp">


                <RelativeLayout
                    android:id="@+id/rellay_restaurantes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:background="@color/darkviolet"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView7"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/restaurantes"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView7"
                            android:layout_centerHorizontal="true"
                            android:text="@string/restaurante"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rellay_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/violet"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/imgView8"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_herramientas"
                            app:tint="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgView8"
                            android:layout_centerHorizontal="true"
                            android:text="@string/configuracion"
                            android:textSize="14sp"
                            android:layout_marginTop="5dp"/>
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
